@@ -37,9 +37,6 @@ gdb_test_no_output "set scheduler-locking on" \
     "enable scheduler-locking, for thread 2"
 
 # Continue.  Thread 2 exits, and the main thread was already stopped.
-if [is_remote target] {
-    setup_kfail "gdb/14618" "*-*-*"
-}
 gdb_test "continue" \
     "No unwaited-for children left." \
     "continue stops when thread 2 exits"
@@ -61,9 +58,6 @@ gdb_continue_to_breakpoint "break-here-2" ".* break-here-2 .*"
 gdb_test_no_output "set scheduler-locking on" \
     "enable scheduler-locking, for main thread"
 # The main thread exits, and thread 3 was already stopped.
-if [is_remote target] {
-    setup_kfail "gdb/14618" "*-*-*"
-}
 gdb_test "continue" \
     "No unwaited-for children left." \
     "continue stops when the main thread exits"
